[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/Scripts/StationJumper.gd" type="Script" id=1]
[ext_resource path="res://Data/Fonts/FontIngame.tres" type="DynamicFont" id=2]
[ext_resource path="res://Data/Fonts/FontIngame_Small_Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Data/UI/styles/item_list.tres" type="Theme" id=4]
[ext_resource path="res://Data/UI/styles/button_left.tres" type="Theme" id=5]
[ext_resource path="res://Data/UI/styles/button_right.tres" type="Theme" id=6]
[ext_resource path="res://Data/UI/styles/panel_background.tres" type="StyleBox" id=7]
[ext_resource path="res://Data/UI/colored_item_list.gd" type="Script" id=8]
[ext_resource path="res://Data/UI/translated_rich_rext_label.gd" type="Script" id=9]

[node name="StationJumper" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StationJumper" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 10.0
margin_right = 794.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StationJumper"]
margin_right = 788.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "SELECT_STATION_TO_JUMP"
align = 1

[node name="ItemList" type="ItemList" parent="StationJumper"]
margin_top = 34.0
margin_right = 788.0
margin_bottom = 444.0
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="StationJumper"]
margin_top = 448.0
margin_right = 788.0
margin_bottom = 548.0
rect_min_size = Vector2( 0, 100 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
script = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="StationJumper"]
margin_top = 552.0
margin_right = 788.0
margin_bottom = 586.0

[node name="Cancel" type="Button" parent="StationJumper/HBoxContainer"]
margin_right = 392.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "CANCEL"

[node name="Jump" type="Button" parent="StationJumper/HBoxContainer"]
margin_left = 396.0
margin_right = 788.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
text = "JUMP"

[connection signal="pressed" from="StationJumper/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="StationJumper/HBoxContainer/Jump" to="." method="_on_Jump_pressed"]
